Collapse OrbitGuard into five-file Java application